Colocando segurança na API
