# src/resources/auth/auth.router.ts
@@ -1,0 +1,11 @@
+// Arquivo src/resources/product/product.router.ts
+import { Router } from 'express';
+import authController from './auth.controller';
+import isAuth from '../../middlewares/isAuth';
+
+const router = Router();
+
+router.post('/login', authController.login);
+router.post('/logout', isAuth , authController.logout);
+
+export default router;
